@@ -1,6 +1,7 @@
 package com.datastructure.datastructureDSA.interviewToday;
 
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -10,10 +11,16 @@ public class RemoveDuplicate {
         List<Integer> numbers = Arrays.asList(1, 2, 3, 2, 4, 5, 1, 6);
 
          Set<Integer> collect = numbers.stream().collect(Collectors.toSet());
+        System.out.println("collection "+collect);
+
+        //or
+
+        Set<Integer> hashMap = new HashSet<>(numbers);
+        System.out.println("hashMap "+hashMap);
 
          //or
 
-         numbers.stream().distinct().collect(Collectors.toList()).forEach(System.out::println);
+         numbers.stream().distinct().toList().forEach(System.out::print);
 
 
         // System.out.println(collect);
